--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development node backend/server.js",
+    "dev": " cross-env NODE_ENV=development node backend/server.js",
     "build": "npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "NODE_ENV=production node backend/server.js"
+    "start": " cross-env NODE_ENV=production node backend/server.js"
   },
   "type": "module",
   "keywords": [],
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "mongodb": "^5.9.2",
     "mongoose": "^8.9.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
