--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "  NODE_ENV=development node backend/server.js",
+    "dev": "cross-env NODE_ENV=development node backend/server.js",
     "build": "npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "  NODE_ENV=production node backend/server.js"
+    "start": "cross-env NODE_ENV=production node backend/server.js"
   },
   "type": "module",
   "keywords": [],
